more brothers add

--- a/brothers.html
+++ b/brothers.html
@@ -240,7 +240,7 @@
               </div>
             </div>
             <div class="profile-info">
-              <div class="profile-name">Benjamin Schiff</div>
+              <div class="profile-name">Ben Schiff</div>
             </div>
           </div>
 
@@ -388,21 +388,22 @@
             </div>
           </div>
 
-          <!-- Elizabeth Tucker -->
+           <!-- Divija Katakam-->
           <div class="profile-card">
             <div class="profile-image-container">
-              <img src="assets/brother-images/Lizzie.jpeg" alt="Elizabeth Tucker" class="profile-image">
+              <img src="assets/brother-images/Haley.jpg" alt="Divija Katakam" class="profile-image">
               <div class="linkedin-overlay">
-                <a href="https://www.linkedin.com/in/elizabethtuckerr/" class="linkedin-link" target="_blank" rel="noopener noreferrer">
+                <a href="https://www.linkedin.com/in/divija-katakam/" class="linkedin-link" target="_blank" rel="noopener noreferrer">
                   <img src="assets/brother-images/linkedin.png" alt="LinkedIn" class="linkedin-icon">
                   <span>View Profile</span>
                 </a>
               </div>
             </div>
             <div class="profile-info">
-              <div class="profile-name">Elizabeth Tucker</div>
+              <div class="profile-name">Divija Katakam</div>
             </div>
           </div>
+
 
           <!-- Esha Rashid -->
           <div class="profile-card">
@@ -519,7 +520,7 @@
           <!-- Hassan Adegoke -->
           <div class="profile-card">
             <div class="profile-image-container">
-              <img src="assets/brother-images/Hassan_Agedoke.jpg" alt="Hassan Adegoke" class="profile-image">
+              <img src="assets/brother-images/Hassan.A.JPEG" alt="Hassan Adegoke" class="profile-image">
               <div class="linkedin-overlay">
                 <a href="https://www.linkedin.com/in/hassan-adegoke/" class="linkedin-link" target="_blank" rel="noopener noreferrer">
                   <img src="assets/brother-images/linkedin.png" alt="LinkedIn" class="linkedin-icon">
@@ -640,7 +641,7 @@
               </div>
             </div>
             <div class="profile-info">
-              <div class="profile-name">Joseph Quinn</div>
+              <div class="profile-name">Joe Quinn</div>
             </div>
           </div>
 
@@ -803,6 +804,23 @@
               <div class="profile-name">Lin Borland</div>
             </div>
           </div>
+
+                    <!-- Lizzie Tucker -->
+          <div class="profile-card">
+            <div class="profile-image-container">
+              <img src="assets/brother-images/Lizzie.jpeg" alt="Elizabeth Tucker" class="profile-image">
+              <div class="linkedin-overlay">
+                <a href="https://www.linkedin.com/in/elizabethtuckerr/" class="linkedin-link" target="_blank" rel="noopener noreferrer">
+                  <img src="assets/brother-images/linkedin.png" alt="LinkedIn" class="linkedin-icon">
+                  <span>View Profile</span>
+                </a>
+              </div>
+            </div>
+            <div class="profile-info">
+              <div class="profile-name">Lizzie Tucker</div>
+            </div>
+          </div>
+
           
           <!-- Lolita Rozenbaum -->
           <div class="profile-card">
@@ -1092,6 +1110,23 @@
             </div>
           </div>
 
+          <!-- Tapan Sidhwani-->
+          <div class="profile-card">
+            <div class="profile-image-container">
+              <img src="assets/brother-images/tapanS.jpg" alt="Tapan Sidhwani" class="profile-image">
+              <div class="linkedin-overlay">
+                <a href="https://www.linkedin.com/in/tapan-sidhwani-163007226/" class="linkedin-link" target="_blank" rel="noopener noreferrer">
+                  <img src="assets/brother-images/linkedin.png" alt="LinkedIn" class="linkedin-icon">
+                  <span>View Profile</span>
+                </a>
+              </div>
+            </div>
+            <div class="profile-info">
+              <div class="profile-name">Tapan Sidhwani</div>
+            </div>
+          </div>
+          
+
           <!-- Walker Pence -->
           <div class="profile-card">
             <div class="profile-image-container">
@@ -1111,7 +1146,7 @@
            <!-- Yeabsera Ababu -->
           <div class="profile-card">
             <div class="profile-image-container">
-              <img src="assets/brother-images/Yeabsera_Ababu.jpg" alt="Yeabsera Ababu" class="profile-image">
+              <img src="assets/brother-images/yeabsera.jpg" alt="Yeabsera Ababu" class="profile-image">
               <div class="linkedin-overlay">
                 <a href="https://www.linkedin.com/in/yeabsera-ababu/" class="linkedin-link" target="_blank" rel="noopener noreferrer">
                   <img src="assets/brother-images/linkedin.png" alt="LinkedIn" class="linkedin-icon">
@@ -1202,7 +1237,7 @@
             <!-- chance Ineza - executive -->
           <div class="profile-card">
             <div class="profile-image-container">
-              <img src="assets/founders-images" alt="Chance Ineza" class="profile-image">
+              <img src="assets/founders-images/Chance.I.JPEG" alt="Chance Ineza" class="profile-image">
               <div class="linkedin-overlay">
                 <a href="https://www.linkedin.com/in/brodyjghaar/" class="linkedin-link" target="_blank" rel="noopener noreferrer">
                   <img src="assets/brother-images/linkedin.png" alt="LinkedIn" class="linkedin-icon">
@@ -1219,7 +1254,7 @@
             <!-- Vittoria Riedling- Founder -->
           <div class="profile-card">
             <div class="profile-image-container">
-              <img src="assets/founders-images" alt="Vittoria Riedling" class="profile-image">
+              <img src="assets/founders-images/Vittoria.R.JPEG" alt="Vittoria Riedling" class="profile-image">
               <div class="linkedin-overlay">
                 <a href="https://www.linkedin.com/in/brodyjghaar/" class="linkedin-link" target="_blank" rel="noopener noreferrer">
                   <img src="assets/brother-images/linkedin.png" alt="LinkedIn" class="linkedin-icon">
@@ -1236,7 +1271,7 @@
             <!-- Grayson smith- vp tech dev -->
           <div class="profile-card">
             <div class="profile-image-container">
-              <img src="assets/founders-images" alt="Grayson Smith" class="profile-image">
+              <img src="assets/founders-images/Grayson.S.PNG" alt="Grayson Smith" class="profile-image">
               <div class="linkedin-overlay">
                 <a href="https://www.linkedin.com/in/brodyjghaar/" class="linkedin-link" target="_blank" rel="noopener noreferrer">
                   <img src="assets/brother-images/linkedin.png" alt="LinkedIn" class="linkedin-icon">
@@ -1253,7 +1288,7 @@
             <!-- Yehan Subasinghe- VP DEI -->
           <div class="profile-card">
             <div class="profile-image-container">
-              <img src="assets/founders-images" alt="Yehan Subasinghe" class="profile-image">
+              <img src="assets/founders-images/Yehan.S.JPEG" alt="Yehan Subasinghe" class="profile-image">
               <div class="linkedin-overlay">
                 <a href="https://www.linkedin.com/in/brodyjghaar/" class="linkedin-link" target="_blank" rel="noopener noreferrer">
                   <img src="assets/brother-images/linkedin.png" alt="LinkedIn" class="linkedin-icon">
@@ -1270,7 +1305,7 @@
             <!-- Mason Anton vp social-->
           <div class="profile-card">
             <div class="profile-image-container">
-              <img src="assets/founders-images" alt="Mason Anton" class="profile-image">
+              <img src="assets/founders-images/Mason.A.JPEG" alt="Mason Anton" class="profile-image">
               <div class="linkedin-overlay">
                 <a href="https://www.linkedin.com/in/brodyjghaar/" class="linkedin-link" target="_blank" rel="noopener noreferrer">
                   <img src="assets/brother-images/linkedin.png" alt="LinkedIn" class="linkedin-icon">
@@ -1287,7 +1322,7 @@
             <!-- Ishita Sujan-->
           <div class="profile-card">
             <div class="profile-image-container">
-              <img src="assets/founders-images" alt="Ishita Sujan" class="profile-image">
+              <img src="assets/founders-images/IShita.S.JPEG" alt="Ishita Sujan" class="profile-image">
               <div class="linkedin-overlay">
                 <a href="https://www.linkedin.com/in/brodyjghaar/" class="linkedin-link" target="_blank" rel="noopener noreferrer">
                   <img src="assets/brother-images/linkedin.png" alt="LinkedIn" class="linkedin-icon">
@@ -1304,7 +1339,7 @@
             <!-- Lin Borland VP Marketing -->
           <div class="profile-card">
             <div class="profile-image-container">
-              <img src="assets/founders-images" alt="Lin Borland" class="profile-image">
+              <img src="assets/founders-images/lin.B.JPEG" alt="Lin Borland" class="profile-image">
               <div class="linkedin-overlay">
                 <a href="https://www.linkedin.com/in/brodyjghaar/" class="linkedin-link" target="_blank" rel="noopener noreferrer">
                   <img src="assets/brother-images/linkedin.png" alt="LinkedIn" class="linkedin-icon">
@@ -1321,7 +1356,7 @@
             <!-- Naya Bakaes -->
           <div class="profile-card">
             <div class="profile-image-container">
-              <img src="assets/founders-images" alt="Naya Bakaes" class="profile-image">
+              <img src="assets/founders-images/Naya.B.JPEG" alt="Naya Bakaes" class="profile-image">
               <div class="linkedin-overlay">
                 <a href="https://www.linkedin.com/in/brodyjghaar/" class="linkedin-link" target="_blank" rel="noopener noreferrer">
                   <img src="assets/brother-images/linkedin.png" alt="LinkedIn" class="linkedin-icon">
@@ -1379,7 +1414,7 @@
           <!-- Katherine Oung -->
           <div class="profile-card">
             <div class="profile-image-container">
-              <img src="assets/brother-images" alt="Katherine Oung" class="profile-image">
+              <img src="assets/founders-images/Katherine.O.JPEG" alt="Katherine Oung" class="profile-image">
               <div class="linkedin-overlay">
                 <a href="https://www.linkedin.com/in/katherine-oung/" class="linkedin-link" target="_blank" rel="noopener noreferrer">
                   <img src="assets/brother-images/linkedin.png" alt="LinkedIn" class="linkedin-icon">
