more aditions of bros and alumnis

--- a/brothers.html
+++ b/brothers.html
@@ -1239,7 +1239,7 @@
             <div class="profile-image-container">
               <img src="assets/founders-images/Chance.I.JPEG" alt="Chance Ineza" class="profile-image">
               <div class="linkedin-overlay">
-                <a href="https://www.linkedin.com/in/brodyjghaar/" class="linkedin-link" target="_blank" rel="noopener noreferrer">
+                <a href="https://www.linkedin.com/in/chance-ineza/" class="linkedin-link" target="_blank" rel="noopener noreferrer">
                   <img src="assets/brother-images/linkedin.png" alt="LinkedIn" class="linkedin-icon">
                   <span>View Profile</span>
                 </a>
@@ -1256,7 +1256,7 @@
             <div class="profile-image-container">
               <img src="assets/founders-images/Vittoria.R.JPEG" alt="Vittoria Riedling" class="profile-image">
               <div class="linkedin-overlay">
-                <a href="https://www.linkedin.com/in/brodyjghaar/" class="linkedin-link" target="_blank" rel="noopener noreferrer">
+                <a href="https://www.linkedin.com/in/vittoria-riedling/" class="linkedin-link" target="_blank" rel="noopener noreferrer">
                   <img src="assets/brother-images/linkedin.png" alt="LinkedIn" class="linkedin-icon">
                   <span>View Profile</span>
                 </a>
@@ -1273,7 +1273,7 @@
             <div class="profile-image-container">
               <img src="assets/founders-images/Grayson.S.PNG" alt="Grayson Smith" class="profile-image">
               <div class="linkedin-overlay">
-                <a href="https://www.linkedin.com/in/brodyjghaar/" class="linkedin-link" target="_blank" rel="noopener noreferrer">
+                <a href="https://www.linkedin.com/in/grayson-m-smith/" class="linkedin-link" target="_blank" rel="noopener noreferrer">
                   <img src="assets/brother-images/linkedin.png" alt="LinkedIn" class="linkedin-icon">
                   <span>View Profile</span>
                 </a>
@@ -1290,7 +1290,7 @@
             <div class="profile-image-container">
               <img src="assets/founders-images/Yehan.S.JPEG" alt="Yehan Subasinghe" class="profile-image">
               <div class="linkedin-overlay">
-                <a href="https://www.linkedin.com/in/brodyjghaar/" class="linkedin-link" target="_blank" rel="noopener noreferrer">
+                <a href="https://www.linkedin.com/in/yehansubasinghe/" class="linkedin-link" target="_blank" rel="noopener noreferrer">
                   <img src="assets/brother-images/linkedin.png" alt="LinkedIn" class="linkedin-icon">
                   <span>View Profile</span>
                 </a>
@@ -1307,7 +1307,7 @@
             <div class="profile-image-container">
               <img src="assets/founders-images/Mason.A.JPEG" alt="Mason Anton" class="profile-image">
               <div class="linkedin-overlay">
-                <a href="https://www.linkedin.com/in/brodyjghaar/" class="linkedin-link" target="_blank" rel="noopener noreferrer">
+                <a href="https://www.linkedin.com/in/mason-anton/" class="linkedin-link" target="_blank" rel="noopener noreferrer">
                   <img src="assets/brother-images/linkedin.png" alt="LinkedIn" class="linkedin-icon">
                   <span>View Profile</span>
                 </a>
@@ -1324,7 +1324,7 @@
             <div class="profile-image-container">
               <img src="assets/founders-images/IShita.S.JPEG" alt="Ishita Sujan" class="profile-image">
               <div class="linkedin-overlay">
-                <a href="https://www.linkedin.com/in/brodyjghaar/" class="linkedin-link" target="_blank" rel="noopener noreferrer">
+                <a href="https://www.linkedin.com/in/ishita-sujan/" class="linkedin-link" target="_blank" rel="noopener noreferrer">
                   <img src="assets/brother-images/linkedin.png" alt="LinkedIn" class="linkedin-icon">
                   <span>View Profile</span>
                 </a>
@@ -1341,7 +1341,7 @@
             <div class="profile-image-container">
               <img src="assets/founders-images/lin.B.JPEG" alt="Lin Borland" class="profile-image">
               <div class="linkedin-overlay">
-                <a href="https://www.linkedin.com/in/brodyjghaar/" class="linkedin-link" target="_blank" rel="noopener noreferrer">
+                <a href="https://www.linkedin.com/in/linborland/" class="linkedin-link" target="_blank" rel="noopener noreferrer">
                   <img src="assets/brother-images/linkedin.png" alt="LinkedIn" class="linkedin-icon">
                   <span>View Profile</span>
                 </a>
@@ -1358,7 +1358,7 @@
             <div class="profile-image-container">
               <img src="assets/founders-images/Naya.B.JPEG" alt="Naya Bakaes" class="profile-image">
               <div class="linkedin-overlay">
-                <a href="https://www.linkedin.com/in/brodyjghaar/" class="linkedin-link" target="_blank" rel="noopener noreferrer">
+                <a href="https://www.linkedin.com/in/nayabakaes/" class="linkedin-link" target="_blank" rel="noopener noreferrer">
                   <img src="assets/brother-images/linkedin.png" alt="LinkedIn" class="linkedin-icon">
                   <span>View Profile</span>
                 </a>
@@ -1448,7 +1448,7 @@
           <!-- Lorita Rozenbaum -->
           <div class="profile-card">
             <div class="profile-image-container">
-              <img src="assets/brother-images" alt="Lorita Rozenbaum" class="profile-image">
+              <img src="assets/brother-images/Lolita.jpeg" alt="Lorita Rozenbaum" class="profile-image">
               <div class="linkedin-overlay">
                 <a href="https://www.linkedin.com/in/lolitarozenbaum/" class="linkedin-link" target="_blank" rel="noopener noreferrer">
                   <img src="assets/brother-images/linkedin.png" alt="LinkedIn" class="linkedin-icon">
