update brothers - katherine oung picture

--- a/brothers.html
+++ b/brothers.html
@@ -1334,7 +1334,7 @@
           <!-- Katherine Oung -->
           <div class="profile-card">
             <div class="profile-image-container">
-              <img src="assets/founders-images/Katherine.O.JPEG" alt="Katherine Oung" class="profile-image">
+              <img src="assets/founders-images/Katherine.jpeg" alt="Katherine Oung" class="profile-image">
               <div class="linkedin-overlay">
                 <a href="https://www.linkedin.com/in/katherine-oung/" class="linkedin-link" target="_blank" rel="noopener noreferrer">
                   <img src="assets/brother-images/linkedin.png" alt="LinkedIn" class="linkedin-icon">
