update brothers - exec positions

--- a/brothers.html
+++ b/brothers.html
@@ -1167,7 +1167,7 @@
             </div>
             <div class="profile-info">
               <div class="profile-name">Chance Ineza</div>
-              <div class="profile-title">VP External</div>
+              <div class="profile-title">VP of External Affairs</div>
             </div>
           </div>
 
@@ -1184,7 +1184,7 @@
             </div>
             <div class="profile-info">
               <div class="profile-name">Vittoria Riedling</div>
-              <div class="profile-title">VP internal</div>
+              <div class="profile-title">VP of Internal Affairs</div>
             </div>
           </div>
 
@@ -1201,7 +1201,7 @@
             </div>
             <div class="profile-info">
               <div class="profile-name">Grayson Smith</div>
-              <div class="profile-title"> VP Tech Dev</div>
+              <div class="profile-title"> VP of Technical Development</div>
             </div>
           </div>
 
@@ -1218,7 +1218,7 @@
             </div>
             <div class="profile-info">
               <div class="profile-name">Yehan Subasinghe</div>
-              <div class="profile-title">VP DEI</div>
+              <div class="profile-title">VP of Diversity, Equity, and Inclusion</div>
             </div>
           </div>
           
@@ -1235,7 +1235,7 @@
             </div>
             <div class="profile-info">
               <div class="profile-name">Mason Anton</div>
-              <div class="profile-title">VP social</div>
+              <div class="profile-title">VP of Social Engagement</div>
             </div>
           </div>
 
@@ -1252,7 +1252,7 @@
             </div>
             <div class="profile-info">
               <div class="profile-name">Ishita Sujan</div>
-              <div class="profile-title">VP Finance</div>
+              <div class="profile-title">VP of Finance</div>
             </div>
           </div>
 
@@ -1269,7 +1269,7 @@
             </div>
             <div class="profile-info">
               <div class="profile-name">Lin Borland</div>
-              <div class="profile-title">VP Marketing</div>
+              <div class="profile-title">VP of Marketing</div>
             </div>
           </div>
 
@@ -1286,7 +1286,7 @@
             </div>
             <div class="profile-info">
               <div class="profile-name">Naya Bakaes</div>
-              <div class="profile-title">VP Operations</div>
+              <div class="profile-title">VP of Operations</div>
             </div>
           </div>
 
@@ -1303,7 +1303,7 @@
             </div>
             <div class="profile-info">
               <div class="profile-name">Eva Cheraisi</div>
-              <div class="profile-title">VP Professional Development</div>
+              <div class="profile-title">VP of Professional Development</div>
             </div>
           </div>
 
