--- a/brothers.html
+++ b/brothers.html
@@ -279,7 +279,7 @@
           <!-- Brooke O Sullivan -->
           <div class="profile-card">
             <div class="profile-image-container">
-              <img src="assets/brother-images/BrookeOSullivan.jpg" alt="Brooke O Sullivan" class="profile-image">
+              <img src="assets/brother-images/BrookeOSullivan.jpeg" alt="Brooke O Sullivan" class="profile-image">
               <div class="linkedin-overlay">
                 <a href="https://www.linkedin.com/in/brooke-osullivan/" class="linkedin-link" target="_blank" rel="noopener noreferrer">
                   <img src="assets/brother-images/linkedin.png" alt="LinkedIn" class="linkedin-icon">
@@ -327,7 +327,7 @@
           <!-- Chance Ineza -->
           <div class="profile-card">
             <div class="profile-image-container">
-              <img src="assets/brother-images/ChanceIneza.JPG" alt="Chance Ineza" class="profile-image">
+              <img src="assets/brother-images/ChanceIneza.jpeg" alt="Chance Ineza" class="profile-image">
               <div class="linkedin-overlay">
                 <a href="https://www.linkedin.com/in/chance-ineza/" class="linkedin-link" target="_blank" rel="noopener noreferrer">
                   <img src="assets/brother-images/linkedin.png" alt="LinkedIn" class="linkedin-icon">
@@ -424,7 +424,7 @@
           <!-- Ethan Joslin -->
           <div class="profile-card">
             <div class="profile-image-container">
-              <img src="assets/brother-images/EthanJoslin.jpg" alt="Ethan Joslin" class="profile-image">
+              <img src="assets/brother-images/EthanJoslin.jpeg" alt="Ethan Joslin" class="profile-image">
               <div class="linkedin-overlay">
                 <a href="https://www.linkedin.com/in/ethan-joslin-vanderbilt/" class="linkedin-link" target="_blank" rel="noopener noreferrer">
                   <img src="assets/brother-images/linkedin.png" alt="LinkedIn" class="linkedin-icon">
@@ -456,7 +456,7 @@
           <!-- Eva Cheraisi -->
           <div class="profile-card">
             <div class="profile-image-container">
-              <img src="assets/brother-images/EvaCheraisi.jpg" alt="Eva Cheraisi" class="profile-image">
+              <img src="assets/brother-images/EvaCheraisi.jpeg" alt="Eva Cheraisi" class="profile-image">
               <div class="linkedin-overlay">
                 <a href="https://www.linkedin.com/in/eva-cheraisi-7a470b1a6/" class="linkedin-link" target="_blank" rel="noopener noreferrer">
                   <img src="assets/brother-images/linkedin.png" alt="LinkedIn" class="linkedin-icon">
@@ -472,7 +472,7 @@
           <!-- Gaby Frei -->
           <div class="profile-card">
             <div class="profile-image-container">
-              <img src="assets/brother-images/GabyFrei.jpg" alt="Gaby Frei" class="profile-image">
+              <img src="assets/brother-images/GabyFrei.jpeg" alt="Gaby Frei" class="profile-image">
               <div class="linkedin-overlay">
                 <a href="https://www.linkedin.com/in/gabrielle-frei/" class="linkedin-link" target="_blank" rel="noopener noreferrer">
                   <img src="assets/brother-images/linkedin.png" alt="LinkedIn" class="linkedin-icon">
@@ -504,7 +504,7 @@
           <!-- Haley Kahn -->
           <div class="profile-card">
             <div class="profile-image-container">
-              <img src="assets/brother-images/HaleyKhan.jpg" alt="Haley Kahn" class="profile-image">
+              <img src="assets/brother-images/HaleyKahn.jpeg" alt="Haley Kahn" class="profile-image">
               <div class="linkedin-overlay">
                 <a href="https://www.linkedin.com/in/haley-kahn/" class="linkedin-link" target="_blank" rel="noopener noreferrer">
                   <img src="assets/brother-images/linkedin.png" alt="LinkedIn" class="linkedin-icon">
@@ -520,7 +520,7 @@
           <!-- Hassan Adegoke -->
           <div class="profile-card">
             <div class="profile-image-container">
-              <img src="assets/brother-images/HassanAgedokeJPEG" alt="Hassan Adegoke" class="profile-image">
+              <img src="assets/brother-images/HassanAgedoke.jpeg" alt="Hassan Adegoke" class="profile-image">
               <div class="linkedin-overlay">
                 <a href="https://www.linkedin.com/in/hassan-adegoke/" class="linkedin-link" target="_blank" rel="noopener noreferrer">
                   <img src="assets/brother-images/linkedin.png" alt="LinkedIn" class="linkedin-icon">
@@ -616,7 +616,7 @@
           <!-- Jolie Hawthorne -->
           <div class="profile-card">
             <div class="profile-image-container">
-              <img src="assets/brother-images/JolieHawthorne.jpeg" alt="Jolie Hawthorne" class="profile-image">
+              <img src="assets/brother-images/JolieHawthorne.jpg" alt="Jolie Hawthorne" class="profile-image">
               <div class="linkedin-overlay">
                 <a href="https://www.linkedin.com/in/jolie-hawthorne/" class="linkedin-link" target="_blank" rel="noopener noreferrer">
                   <img src="assets/brother-images/linkedin.png" alt="LinkedIn" class="linkedin-icon">
@@ -664,7 +664,7 @@
           <!-- Kalyn Day -->
           <div class="profile-card">
             <div class="profile-image-container">
-              <img src="assets/brother-images/KalynDay.jpg" alt="Kalyn Day" class="profile-image">
+              <img src="assets/brother-images/KalynDay.jpeg" alt="Kalyn Day" class="profile-image">
               <div class="linkedin-overlay">
                 <a href="https://www.linkedin.com/in/kalynday/" class="linkedin-link" target="_blank" rel="noopener noreferrer">
                   <img src="assets/brother-images/linkedin.png" alt="LinkedIn" class="linkedin-icon">
@@ -777,7 +777,7 @@
           <!-- Lucas Slater -->
           <div class="profile-card">
             <div class="profile-image-container">
-              <img src="assets/brother-images/LucasSlater.PNG" alt="Lucas Slater" class="profile-image">
+              <img src="assets/brother-images/LucasSlater.jpg" alt="Lucas Slater" class="profile-image">
               <div class="linkedin-overlay">
                 <a href="https://www.linkedin.com/in/lucas-slater/" class="linkedin-link" target="_blank" rel="noopener noreferrer">
                   <img src="assets/brother-images/linkedin.png" alt="LinkedIn" class="linkedin-icon">
@@ -857,7 +857,7 @@
           <!-- Megan Wang -->
           <div class="profile-card">
             <div class="profile-image-container">
-              <img src="assets/brother-images/MeganWang.jpeg" alt="Megan Wang" class="profile-image">
+              <img src="assets/brother-images/MeganWang.jpg" alt="Megan Wang" class="profile-image">
               <div class="linkedin-overlay">
                 <a href="https://www.linkedin.com/in/meganzwang/" class="linkedin-link" target="_blank" rel="noopener noreferrer">
                   <img src="assets/brother-images/linkedin.png" alt="LinkedIn" class="linkedin-icon">
@@ -905,7 +905,7 @@
           <!-- Naya Bakaes -->
           <div class="profile-card">
             <div class="profile-image-container">
-              <img src="assets/brother-images/NayaBakaes.jpg" alt="Naya Bakaes" class="profile-image">
+              <img src="assets/brother-images/NayaBakaes.jpeg" alt="Naya Bakaes" class="profile-image">
               <div class="linkedin-overlay">
                 <a href="https://www.linkedin.com/in/nayabakaes/" class="linkedin-link" target="_blank" rel="noopener noreferrer">
                   <img src="assets/brother-images/linkedin.png" alt="LinkedIn" class="linkedin-icon">
@@ -969,7 +969,7 @@
           <!-- Sarah Goldstein -->
           <div class="profile-card">
             <div class="profile-image-container">
-              <img src="assets/brother-images/SarahGoldstein.jpeg" alt="Sarah Goldstein" class="profile-image">
+              <img src="assets/brother-images/SarahGoldstein.jpg" alt="Sarah Goldstein" class="profile-image">
               <div class="linkedin-overlay">
                 <a href="https://www.linkedin.com/in/goldstein-sarah/" class="linkedin-link" target="_blank" rel="noopener noreferrer">
                   <img src="assets/brother-images/linkedin.png" alt="LinkedIn" class="linkedin-icon">
@@ -1334,7 +1334,7 @@
           <!-- Katherine Oung -->
           <div class="profile-card">
             <div class="profile-image-container">
-              <img src="assets/brother-images/KatherineOung.jpeg" alt="Katherine Oung" class="profile-image">
+              <img src="assets/brother-images/KatherineOung.jpg" alt="Katherine Oung" class="profile-image">
               <div class="linkedin-overlay">
                 <a href="https://www.linkedin.com/in/katherine-oung/" class="linkedin-link" target="_blank" rel="noopener noreferrer">
                   <img src="assets/brother-images/linkedin.png" alt="LinkedIn" class="linkedin-icon">
