--- a/brothers.html
+++ b/brothers.html
@@ -1137,7 +1137,7 @@
           <!-- Ludvig Denker - President-->
           <div class="profile-card">
             <div class="profile-image-container">
-              <img src="assets/brother-images/LudvigDenker.jpeg" alt="Ludvig Denker" class="profile-image">
+              <img src="assets/founders-images/LudvigHS.jpg" alt="Ludvig Denker" class="profile-image">
               <div class="linkedin-overlay">
                 <a href="https://www.linkedin.com/in/ludvig-denker/" class="linkedin-link" target="_blank" rel="noopener noreferrer">
                   <img src="assets/brother-images/linkedin.png" alt="LinkedIn" class="linkedin-icon">
