--- a/brothers.html
+++ b/brothers.html
@@ -1385,7 +1385,7 @@
           <!-- Zofia Luther -->
           <div class="profile-card">
             <div class="profile-image-container">
-              <img src="assets/brother-images/ZofiaLuther.JPG" alt="Zofia Luther" class="profile-image">
+              <img src="assets/brother-images/ZofiaLuther.jpeg" alt="Zofia Luther" class="profile-image">
               <div class="linkedin-overlay">
                 <a href="https://www.linkedin.com/in/zofialuther/" class="linkedin-link" target="_blank" rel="noopener noreferrer">
                   <img src="assets/brother-images/linkedin.png" alt="LinkedIn" class="linkedin-icon">
